SDIT-1124: 🔒️ Update images for libc6 vuln.